# 2048-solver

./: .gitignore  CMakeLists.txt  README.md  hello.py  refresh_build.zsh
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  beam.cpp  beam.hpp  main.c  matrix.hpp  minimax.cpp  minimax.hpp  moves.cpp  moves.hpp  moveutils.cpp  moveutils.hpp
src/cpp/game/: game.hpp  minimax.cpp  minimax.hpp  moves.cpp  moves.hpp  moveutils.cpp  moveutils.hpp  treeutils.cpp
src/py/: exec.py  gameimplementation.py  gameutils.py  loadlib.py  loadlibrary.py  main.py  run.py
